--- a/src/main/resources/employees.jrxml
+++ b/src/main/resources/employees.jrxml
@@ -24,7 +24,7 @@
                     <textElement>
                         <font size="34" isBold="true"/>
                     </textElement>
-                    <text><![CDATA[Java Techie]]></text>
+                    <text><![CDATA[TEST]]></text>
                 </staticText>
                 <staticText>
                     <reportElement x="395" y="43" width="180" height="20" forecolor="#FFFFFF" uuid="d542e825-fb57-41bd-b967-ba4a22515efe"/>
